Fix extra margin bottom

--- a/scss/picbook.scss
+++ b/scss/picbook.scss
@@ -30,6 +30,7 @@ $thumb-height: 206px;
         background-size: cover;
         background-position: 50% 25%;
         transition: all 199ms ease;
+        vertical-align: top;
         opacity: .73;
 
         &:hover {
